feat: renamed FE folder, created nodejs service for dialogue-hub
